# aed-proy2

./: .gitignore  CMakeLists.txt  README.md  bench.cpp  default.nix  flake.nix  get-vendored.sh  main.cpp  resultados_benchmark.csv  shell.nix
assets/: grido.json
include/: dolist.hpp  minheap.hpp  queue.hpp  rtree.hpp  stack.hpp  vector.hpp
mapa/: DataLoader.hpp  Defines.hpp  MapCamera.hpp  MapView.hpp  TileCache.hpp  Widgets.hpp  Window.hpp
reporte/: main.tex
src/: rtree.cpp
tests/: CMakeLists.txt  test_dolist.cpp  test_queue.cpp  test_rtree.cpp  test_stack.cpp  test_vector.cpp
